--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -5,9 +5,10 @@ name: Generate Changelog
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "zell-test" branch
-  release: [published]
+  release: 
+    types: [published]
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  workflow_dispatch: {}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
