--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -27,8 +27,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: Download changelog
         run: |
-          wget -x "https://github.com/zeebe-io/zeebe-changelog/releases/download/0.7.0/zeebe-changelog_0.7.0_Linux_x86_64.tar.gz"
-          tar -xzvf zeebe-changelog_0.7.0_Linux_x86_64.tar.gz
+          wget -c "https://github.com/zeebe-io/zeebe-changelog/releases/download/0.7.0/zeebe-changelog_0.7.0_Linux_x86_64.tar.gz"
+          ls -la
           echo "Hello, world!"
           echo ${{ github.event.payload }}
           env
