--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -17,7 +17,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      ZCL_TARGET_REV: ${{ github.event.payload.tag }}
+      ZCL_TARGET_REV: $GITHUB_REF_NAME
+      ZCL_FROM_REV: ""
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -30,8 +31,12 @@ jobs:
           wget -c "https://github.com/zeebe-io/zeebe-changelog/releases/download/0.7.0/zeebe-changelog_0.7.0_Linux_x86_64.tar.gz" -O - | tar -xz
           ls -la
           echo "Hello, world!"
-          echo ${{ github.event.payload }}
+          echo ${{ github.event }}
+          echo "======"
           env
+          export ZCL_FROM_REV=$(git describe --abbrev=0 --tags `git rev-list --tags --skip=1 --max-count=1`) # get prev tag
+          echo $ZCL_FROM_REV
+          echo $ZCL_TARGET_REV
           ./zcl add-labels --token=${{ secrets.GITHUB_TOKEN }} --from=$ZCL_FROM_REV --target=$ZCL_TARGET_REV  --label=\"release/$ZCL_TARGET_REV\" --org zelldon --repo changelog-test
 
       # Runs a set of commands using the runners shell
