--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -38,8 +38,8 @@ jobs:
           echo ${{ github.payload }}
           echo "======"
           env
-          export ZCL_FROM_REV=$(git describe --abbrev=0 --tags `git rev-list --tags --skip=1 --max-count=1`) # get prev tag
           export ZCL_TARGET_REV=${{ github.event.tag_name }}
+          export ZCL_FROM_REV=$( git describe --abbrev=0 --tags ZCL_TARGET_REV^) # get prev tag          
           echo $ZCL_FROM_REV
           echo $ZCL_TARGET_REV
           ./zcl add-labels --token=${{ secrets.GITHUB_TOKEN }} --from=$ZCL_FROM_REV --target=$ZCL_TARGET_REV  --label=\"release/$ZCL_TARGET_REV\" --org zelldon --repo changelog-test
